o IT's now support embedded mode with maven 3.0.4